@@ -1,6 +1,7 @@
 48
 ================
 
+07/01/24 Disabling entry type brings back transfer in box #1378
 05/01/24 Fix converters to set EntryTypeID, add Abandoned type #1378
 05/01/24 Add animal.EntryTypeID and remove IsTransfer from screens #1378
 05/01/24 Fix Firefox SameSite warning on session cookie
